--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -12,12 +12,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.9.0",
     "framer-motion": "^12.14.0",
+    "prettierrc": "0.0.0-5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "recharts": "^2.15.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.99.9"
   },
   "scripts": {
     "start": "react-scripts start",
