--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -1,8 +1,7 @@
-fastapi==0.109.1
-uvicorn==0.27.0
+fastapi==0.95.2
+uvicorn==0.22.0
 python-dotenv==1.0.0
-celery==5.3.6
-redis==4.6.0
-netmiko==4.2.0
-asyncssh==2.14.10.0
-prometheus-client==0.2
+requests==2.28.2
+paramiko==3.1.0
+pydantic==1.10.7
+loguru==0.7.0
