基础api服务可进行,可扫描网络交换机，需用设备进一步调试

--- a/src/backend/.gitignore
+++ b/src/backend/.gitignore
@@ -1,7 +1,10 @@
+# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
 *.so
+
+# Python packaging
 .Python
 build/
 develop-eggs/
@@ -23,6 +26,8 @@ MANIFEST
 # IDE
 .idea/
 .vscode/
+*.swp
+*.swo
 
 # Environment
 .env
@@ -35,7 +40,10 @@ venv.bak/
 
 # Logs
 *.log
+*.log.*
+logs/
 
-# 忽略.env文件
-.env
+# Secrets
 *.secret
+*.key
+*.pem
