--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -1,8 +1,10 @@
-fastapi==0.95.2
-uvicorn==0.22.0
-python-dotenv==1.0.0
-requests==2.28.2
-paramiko==3.1.0
-pydantic==1.10.7
-loguru==0.7.0
-python-nmap==0.7.1
+fastapi>=0.95.2
+uvicorn>=0.22.0
+python-dotenv>=1.0.0
+requests>=2.28.2
+paramiko>=3.1.0
+pydantic>=1.10.7
+loguru>=0.7.0
+python-nmap>=0.7.1
+tenacity>=9.1.2
+typing-extensions>=4.0.0
