--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,14 +7,13 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    # defaults:
-      #run:
-        # working-directory: src/frontend
-
     steps:
       - uses: actions/checkout@v4
-      - name: Navigate to project
-        run: cd src/frontend && echo "PROJECT_DIR=$(pwd)" >> $GITHUB_ENV
+
+      - name: Configure Git
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
@@ -26,7 +25,7 @@ jobs:
         with:
           node-version: 20
           cache: 'pnpm'
-          cache-dependency-path: src/frontend/pnpm-lock.yaml
+          cache-dependency-path: 'src/frontend/pnpm-lock.yaml'
 
       - name: Install dependencies
         working-directory: src/frontend
@@ -36,7 +35,7 @@ jobs:
         working-directory: src/frontend
         run: pnpm run build
 
-      - name: Deploy
+      - name: Deploy to GitHub Pages
         working-directory: src/frontend
         run: npx gh-pages -d build
         env:
