--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,5 +42,4 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          npx gh-pages -d build -u "github-actions[bot] <github-actions[bot]@users.noreply.github.com>" \
-            --repo "https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git"
+          npx gh-pages -d build -u "github-actions[bot] <github-actions[bot]@users.noreply.github.com>" --repo "https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git"
