--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -2,10 +2,13 @@ fastapi>=0.95.2
 uvicorn>=0.22.0
 python-dotenv>=1.0.0
 requests>=2.28.2
-paramiko>=3.1.0
+paramiko>=3.3.0
 pydantic>=1.10.7
 loguru>=0.7.0
 python-nmap>=0.7.1
 tenacity>=9.1.2
 typing-extensions>=4.0.0
+aiofiles>=24.1.0
+telnetlib3>=2.0.4
+asyncssh>=2.14.0
 aiofiles>=24.1.0
